TDB - 0.2
- Initial fork changes
- Changed Logging format (Time + severity + context)