@@ -1,3 +1,4 @@
 TDB - 0.2
 - Initial fork changes
 - Changed Logging format (Time + severity + context)
+- Added Applicaiton singleton
